# bite

./: Cargo.toml
src/: lib.rs  main.rs
src/bite/: endian.rs  endian2.rs  endianness.rs  le_read.rs  le_write.rs  mod.rs  read.rs  read_le.rs  write.rs  write_le.rs
src/bite/endian/: definition.rs  implementation.rs  mod.rs
