[package]
name          = "bite"
version       = "0.0.5"
authors       = ["hinaria <a@hinaria.com>"]
description   = "read and write primitives in little endian, and in big endian."

documentation = "https://docs.hinaria.com/p/bite"
homepage      = "https://code.hinaria.com/p/bite"
repository    = "https://github.com/hinaria/bite"

license       = "MIT/Apache-2.0"
categories    = ["encoding", "parsing"]
keywords      = ["binary", "byte", "endian", "big-endian", "little-endian"]

include       = ["src/*", "build.rs", "Cargo.toml"]
exclude       = ["src/main.rs"]
